# deepshield-core

./: .env.example  Cargo.toml  README.md
src/: errors.rs  lib.rs
src/analyzers/: ai_agent.rs  governance_analyzer.rs  protocol_validator.rs  smart_contract_analyzer.rs  transaction_analyzer.rs
src/chains/solana/: monitor.rs
src/defenders/: emergency_shutdown.rs  mev_protector.rs
src/llm/: mod.rs
src/monitors/: bridge_monitor.rs  oracle_validator.rs
src/utils/: constants.rs  crypto.rs  logger.rs  math.rs  metrics.rs  mod.rs  validation.rs
