[package]
name = "deepshield-core"
version = "0.1.0"
edition = "2021"
description = "A comprehensive AI-powered security framework for DeFi agents and smart contracts"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
ethers = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
hex = "0.4"
sha3 = "0.10"
primitive-types = "0.12"
futures = "0.3"
dashmap = "5.4"
once_cell = "1.17"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15" 